[tool.poetry]
name = "hypertime"
version = "0.1.0"
description = "A flexible robotics and reinforcement learning simulation framework"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Eliottfrhl/HyperTime"
repository = "https://github.com/Eliottfrhl/HyperTime"
documentation = "https://Eliottfrhl.github.io/HyperTime/"
keywords = ["robotics", "reinforcement-learning", "simulation", "rl", "pybullet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "hypertime"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
pyyaml = "^6.0"

# Optional dependencies for simulators
pybullet = {version = "^3.2.5", optional = true}

# Optional dependencies for RL
torch = {version = "^2.0.0", optional = true}
gymnasium = {version = "^0.29.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-autorefs = "^0.5.0"

[tool.poetry.extras]
simulators = ["pybullet"]
rl = ["torch", "gymnasium"]
all = ["pybullet", "torch", "gymnasium"]

[tool.poetry.scripts]
test = "scripts.test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=hypertime --cov-report=term-missing --cov-report=html -p no:rostest"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["hypertime"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
